Fix delete bug, extra padding

--- a/components/Politician/HeaderSection.module.scss
+++ b/components/Politician/HeaderSection.module.scss
@@ -35,7 +35,6 @@
       font-family: $font-secondary;
       font-weight: 300;
       max-width: 50rem;
-      padding: 0.5rem 2rem 1rem;
       margin-bottom: 1rem;
     }
   }
